QA_Project/force-app/main/default/objects/Opportunity/fields/Completed_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Completed_Checkbox__c</fullName>
    <formula>IF( CloseDate  &lt;= TODAY()  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed  Checkbox</label>
    <type>Checkbox</type>
</CustomField>