QA_Project/force-app/main/default/objects/Opportunity/fields/Instructor_del2__c.field-meta.xml
<CustomField>
    <fullName>Instructor_del2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Instructor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Courses_del1</relationshipName>
    <type>Lookup</type>
</CustomField>