QA_Project/force-app/main/default/objects/Opportunity/fields/Instructor_Information__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Information__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Type</label>
    <referenceTo>Instructor_Information__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>