QA_Project/force-app/main/default/objects/Opportunity/fields/Pay_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Pay_per_hour__c</fullName>
    <formula>Instructor_Information__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>