QA_Project/force-app/main/default/objects/Opportunity/listViews/Test_Courses.listView-meta.xml
<ListView>
    <fullName>Test_Courses</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Test Courses</label>
    <sharedTo>
        <role>Instructor</role>
    </sharedTo>
</ListView>